--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-html
+ivehtml
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -104,7 +104,7 @@ ul { padding-left: 20px; margin-top: 5px; }
     <!-- ABOUT -->
     <div id="about" class="section">
         <h2>About</h2>
-        <p>Tim van Veen is a creative director, producer, and visual storyteller based in Amsterdam. Combining music, photography, and spatial design, Tim crafts cinematic atmospheres for boutique identity and projects.</p>
+        <p>Tim van Veen is a creative director, producer, sonic and visual storyteller based in Amsterdam. Combining music, photography, and spatial design, Tim crafts cinematic atmospheres for boutique identity and projects.</p>
         <img src="images/selfportrait.jpg" alt="Tim van Veen" style="width:200px; border-radius:6px; margin-top:15px;">
     </div>
 
@@ -112,10 +112,10 @@ ul { padding-left: 20px; margin-top: 5px; }
     <div id="contact" class="section contact-block">
         <h2>Contact</h2>
         <p><strong>Tim van Veen</strong><br>
-        Retail & Creative Identity Support<br>
+        Creative Director & Producer<br>
         Amsterdam, NL<br>
         <a href="mailto:contact@vanveenidentity.com">contact@vanveenidentity.com</a></p>
-        <p><a href="VanVeenIdentity_CV.pdf" target="_blank">Download Retail CV →</a></p>
+    
     </div>
 
     <p class="footer">© 2025 VanVeenIdentity — Sound · Picture · Space</p>
