Revise content for home, sound, and about sections
Updated text for improved clarity and detail in various sections.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ivehtml
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -60,14 +60,14 @@ ul { padding-left: 20px; margin-top: 5px; }
     <div id="home" class="section">
         <h1>VanVeenIdentity</h1>
         <p><strong>Sound · Picture · Space</strong></p>
-        <p>Creating cinematic, warm, boutique-friendly atmospheres for brands, stores, and projects. Combine music, visuals, and spatial design to elevate your identity.</p>
+        <p>Creating experiences with a warm, boutique-friendly atmosphere for artist, brands, stores, and projects. Combine music, visuals, and spatial design to elevate your identity.</p>
         <img src="images/hero.jpg" alt="Hero Image" style="width:100%; border-radius:6px; margin-top:25px;">
     </div>
 
     <!-- SOUND -->
     <div id="sound" class="section">
         <h2>Sound</h2>
-        <p>Music composition, lofi/jazzy/432Hz ambient tracks, background music for boutique atmosphere or media use.</p>
+        <p>Music composition and production. Lofi/jazzy/432Hz ambient tracks, music for boutique atmosphere or media use.</p>
         <ul>
             <li>Track 1 — [Insert link]</li>
             <li>Milk & Cheese Track 1 — [Insert link]</li>
@@ -104,7 +104,7 @@ ul { padding-left: 20px; margin-top: 5px; }
     <!-- ABOUT -->
     <div id="about" class="section">
         <h2>About</h2>
-        <p>Tim van Veen is a creative director, producer, sonic and visual storyteller based in Amsterdam. Combining music, photography, and spatial design, Tim crafts cinematic atmospheres for boutique identity and projects.</p>
+        <p>Tim van Veen is a sonic and visual storyteller based in Amsterdam. Combining music, photography, and spatial design, Tim crafts cinematic atmospheres for boutique identity and projects. With a sharp feel on estethics and an eye for the audience's experience Tim makes sure identity is solidified and crystal clear from an outside perspective, not only in direction but with a hands-on aproach he crafts the space in between. </p>
         <img src="images/selfportrait.jpg" alt="Tim van Veen" style="width:200px; border-radius:6px; margin-top:15px;">
     </div>
 
