--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ ul { padding-left: 20px; margin-top: 5px; }
     <!-- ABOUT -->
     <div id="about" class="section">
         <h2>About</h2>
-        <p>Tim van Veen is a sonic and visual storyteller based in Amsterdam. Combining music, photography, and spatial design, Tim crafts cinematic atmospheres for boutique identity and projects. With a sharp feel on estethics and an eye for the audience's experience Tim makes sure identity is solidified and crystal clear from an outside perspective, not only in direction but with a hands-on aproach he crafts the space in between. </p>
+        <p>Tim van Veen is a sonic and visual storyteller based in Amsterdam. Combining music, photography, and spatial design, he crafts cinematic atmospheres for boutique brands and bespoke projects. With a refined sense of aesthetics and a keen awareness of the audience’s experience, Tim ensures that a brand’s essence becomes crystal clear from the outside in. Beyond direction alone, his hands-on approach shapes the space in between—bringing ideas to life with precision and character. </p>
         <img src="images/selfportrait.jpg" alt="Tim van Veen" style="width:200px; border-radius:6px; margin-top:15px;">
     </div>
 
