--- a/index.html
+++ b/index.html
@@ -69,11 +69,9 @@ ul { padding-left: 20px; margin-top: 5px; }
         <h2>Sound</h2>
         <p>Music composition and production. Lofi/jazzy/432Hz ambient tracks, music for boutique atmosphere or media use.</p>
         <ul>
-            <li>Track 1 — [https://search.cavendishmusic.com/track/CAVC0595]</li>
-            <li>Milk & Cheese Track 1 — [<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/2vjNAxkUvIrgCDyXtBD9fy?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>]</li>
-            <li>Milk & Cheese Track 2 — [<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/1F8ubL4H0e4SNAZmH45jaf?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>]</li>
+            <li>[<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/2vjNAxkUvIrgCDyXtBD9fy?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>]</li>
+            <li>[<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/1F8ubL4H0e4SNAZmH45jaf?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>]</li>
         </ul>
-        <p>Optional embedded SoundCloud/Spotify/YouTube links.</p>
     </div>
 
     <!-- PICTURE -->
