--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ ul { padding-left: 20px; margin-top: 5px; }
     <div id="about" class="section">
         <h2>About</h2>
         <p>Tim van Veen is a sonic and visual storyteller based in Amsterdam. Combining music, photography, and spatial design, he crafts cinematic atmospheres for boutique brands and bespoke projects. With a refined sense of aesthetics and a keen awareness of the audience’s experience, Tim ensures that a brand’s essence becomes crystal clear from the outside in. Beyond direction alone, his hands-on approach shapes the space in between—bringing ideas to life with precision and character. </p>
-        <img src="images/selfportrait.jpg" alt="Tim van Veen" style="width:200px; border-radius:6px; margin-top:15px;">
+        <img src="images/1.jpg" alt="Tim van Veen" style="width:200px; border-radius:6px; margin-top:15px;">
     </div>
 
     <!-- CONTACT -->
