Revise description for home section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ ul { padding-left: 20px; margin-top: 5px; }
     <div id="home" class="section">
         <h1>VanVeenIdentity</h1>
         <p><strong>Sound · Picture · Space</strong></p>
-        <p>Creating experiences with a warm, boutique-friendly atmosphere for artist, brands, stores, and projects. Combine music, visuals, and spatial design to elevate your identity.</p>
+        <p>Crafting signature musical experiences that elevate artists, brands, and projects. Enhanced with visuals, spatial design, and bespoke creations for a fully immersive identity.</p>
         <img src="images/hero.jpg" alt="Hero Image" style="width:100%; border-radius:6px; margin-top:25px;">
     </div>
 
