Update image sources in index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ ul { padding-left: 20px; margin-top: 5px; }
         <h1>VanVeenIdentity</h1>
         <p><strong>Sound · Picture · Space</strong></p>
         <p>Crafting signature musical experiences that elevate artists, brands, and projects. Enhanced with visuals, spatial design, and bespoke creations for a fully immersive identity.</p>
-        <img src="images/hero.jpg" alt="Hero Image" style="width:100%; border-radius:6px; margin-top:25px;">
+        <img src="images/ampex.jpg" <img src="images/desk.jpg" style="width:100%; border-radius:6px; margin-top:25px;">
     </div>
 
     <!-- SOUND -->
@@ -103,7 +103,7 @@ ul { padding-left: 20px; margin-top: 5px; }
     <div id="about" class="section">
         <h2>About</h2>
         <p>Tim van Veen is a sonic and visual storyteller based in Amsterdam. Combining music, photography, and spatial design, he crafts cinematic atmospheres for boutique brands and bespoke projects. With a refined sense of aesthetics and a keen awareness of the audience’s experience, Tim ensures that a brand’s essence becomes crystal clear from the outside in. Beyond direction alone, his hands-on approach shapes the space in between—bringing ideas to life with precision and character. </p>
-        <img src="images/1.jpg" style="width:200px; border-radius:6px; margin-top:15px;">
+        <img src="images/DSC_0040.2.jpg" style="width:200px; border-radius:6px; margin-top:15px;">
     </div>
 
     <!-- CONTACT -->
