--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ ul { padding-left: 20px; margin-top: 5px; }
         <h1>VanVeenIdentity</h1>
         <p><strong>Sound · Picture · Space</strong></p>
         <p>Crafting signature musical experiences that elevate artists, brands, and projects. Enhanced with visuals, spatial design, and bespoke creations for a fully immersive identity.</p>
-        <img src="images/ampex.jpg" <img src="images/desk.jpg" style="width:100%; border-radius:6px; margin-top:25px;">
+        <img src="images/DSC_0880.jpg" style="width:100%; border-radius:6px; margin-top:25px;">
     </div>
 
     <!-- SOUND -->
