--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@ ul { padding-left: 20px; margin-top: 5px; }
     <!-- SOUND -->
     <div id="sound" class="section">
         <h2>Sound</h2>
-        <p>Music composition and production. Lofi/jazzy/432Hz ambient tracks, music for boutique atmosphere or media use.</p>
+        <p>Music Composition & Production
+I craft music tailored to your vision, combining creative expression with technical precision. My work focuses on rich, upscale timbres, balanced clarity, and immersive soundscapes that evoke emotion and atmosphere. Specializing in lo-fi, jazzy, and chill tracks, I create music that melts into the background or becomes the defining character of a space or media project.
+Whether it’s for boutique venues, film, advertising, or digital media, I approach each project with a focus on originality, detail, and sonic quality. From concept to final mix, every track is designed to serve the mood, enhance the experience, and leave a lasting impression.</p>
         <ul>
             <li><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/2vjNAxkUvIrgCDyXtBD9fy?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></li>
             <li><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/1F8ubL4H0e4SNAZmH45jaf?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></li>
@@ -77,7 +79,10 @@ ul { padding-left: 20px; margin-top: 5px; }
     <!-- PICTURE -->
     <div id="picture" class="section">
         <h2>Picture</h2>
-        <p>Cinematic photography, product shots, mood portraits, lifestyle and food photography, object photography.</p>
+        <p>Photography & Visual Content
+Photography & Visual Content
+I capture moments and environments with a balance of authenticity and artistry. From documenting the creative process in the studio to crafting visually striking product and interior photography, my work bridges storytelling and aesthetics. Every image is designed to communicate atmosphere, character, and intention—whether it’s the intimacy of an artist at work, the details of a product, or the essence of a space.
+With a focus on composition, light, and mood, I create content that feels both natural and carefully crafted. These images are ideal for branding, media, or personal projects where every detail matters, delivering visuals that resonate</p>
         <div class="gallery">
             <img src="images/portrait.jpg" alt="Portrait">
             <img src="images/product.jpg" alt="Product">
@@ -85,13 +90,13 @@ ul { padding-left: 20px; margin-top: 5px; }
             <img src="images/lamp.jpg" alt="Lamp">
             <img src="images/object.jpg" alt="Handmade Object">
         </div>
-        <p>Short video sections or embedded videos can be added here.</p>
     </div>
 
     <!-- SPACE -->
     <div id="space" class="section">
         <h2>Space</h2>
-        <p>Interior styling, studio build, spatial storytelling, and handcrafted objects for boutique or brand spaces.</p>
+        <p>Custom Spaces & Studio Design
+From bespoke furniture to full studio builds, I craft spaces that are as functional as they are inspiring. Specializing in tailored solutions—pedalboards from reclaimed wood, elegant interior pillars, custom acoustic panels, and complete studio design—using premium materials like sheepswool for superior acoustics and quality. Every project is made to elevate both form and function, creating environments that feel intentional, comfortable, and high-end.</p>
         <div class="gallery">
             <img src="images/studio.jpg" alt="Studio Build">
             <img src="images/pillars.jpg" alt="Interior Pillars">
