Revise content in index.html for clarity and impact
Updated descriptions for sound, picture, space, and about sections to enhance clarity and engagement.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@ ul { padding-left: 20px; margin-top: 5px; }
     <div id="sound" class="section">
         <h2>Sound</h2>
         <p>Music Composition & Production
-I craft music tailored to your vision, combining creative expression with technical precision. My work focuses on rich, upscale timbres, balanced clarity, and immersive soundscapes that evoke emotion and atmosphere. Specializing in lo-fi, jazzy, and chill tracks, I create music that melts into the background or becomes the defining character of a space or media project.
-Whether it’s for boutique venues, film, advertising, or digital media, I approach each project with a focus on originality, detail, and sonic quality. From concept to final mix, every track is designed to serve the mood, enhance the experience, and leave a lasting impression.</p>
+Crafted to bring any vision to life, with rich, upscale timbres and balanced clarity. 
+            Specializing in lo-fi and jazzy tracks that melt into the background or set the perfect boutique atmosphere. Ideal for media, branding, or immersive experiences.
+</p>
         <ul>
             <li><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/2vjNAxkUvIrgCDyXtBD9fy?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></li>
             <li><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/1F8ubL4H0e4SNAZmH45jaf?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></li>
@@ -80,9 +81,8 @@ Whether it’s for boutique venues, film, advertising, or digital media, I appro
     <div id="picture" class="section">
         <h2>Picture</h2>
         <p>Photography & Visual Content
-Photography & Visual Content
-I capture moments and environments with a balance of authenticity and artistry. From documenting the creative process in the studio to crafting visually striking product and interior photography, my work bridges storytelling and aesthetics. Every image is designed to communicate atmosphere, character, and intention—whether it’s the intimacy of an artist at work, the details of a product, or the essence of a space.
-With a focus on composition, light, and mood, I create content that feels both natural and carefully crafted. These images are ideal for branding, media, or personal projects where every detail matters, delivering visuals that resonate</p>
+Capturing the essence of the creative process, from intimate studio moments to polished product and interior photography. 
+            Combining documentary storytelling with an artistic eye to produce images that feel authentic, atmospheric, and visually striking.</p>
         <div class="gallery">
             <img src="images/portrait.jpg" alt="Portrait">
             <img src="images/product.jpg" alt="Product">
@@ -96,7 +96,8 @@ With a focus on composition, light, and mood, I create content that feels both n
     <div id="space" class="section">
         <h2>Space</h2>
         <p>Custom Spaces & Studio Design
-From bespoke furniture to full studio builds, I craft spaces that are as functional as they are inspiring. Specializing in tailored solutions—pedalboards from reclaimed wood, elegant interior pillars, custom acoustic panels, and complete studio design—using premium materials like sheepswool for superior acoustics and quality. Every project is made to elevate both form and function, creating environments that feel intentional, comfortable, and high-end.</p>
+Bespoke solutions for functional and inspiring environments—pedalboards from reclaimed wood, custom acoustic panels, interior pillars, or complete studio builds. 
+            High-end materials like sheepswool ensure superior quality and acoustics, creating spaces that feel intentional, comfortable, and refined.</p>
         <div class="gallery">
             <img src="images/studio.jpg" alt="Studio Build">
             <img src="images/pillars.jpg" alt="Interior Pillars">
@@ -107,7 +108,9 @@ From bespoke furniture to full studio builds, I craft spaces that are as functio
     <!-- ABOUT -->
     <div id="about" class="section">
         <h2>About</h2>
-        <p>Tim van Veen is a sonic and visual storyteller based in Amsterdam. Combining music, photography, and spatial design, he crafts cinematic atmospheres for boutique brands and bespoke projects. With a refined sense of aesthetics and a keen awareness of the audience’s experience, Tim ensures that a brand’s essence becomes crystal clear from the outside in. Beyond direction alone, his hands-on approach shapes the space in between—bringing ideas to life with precision and character. </p>
+        <p>Tim van Veen is a sonic and visual storyteller based in Amsterdam, blending music, photography, and spatial design to craft cinematic atmospheres for boutique brands and bespoke projects. 
+            With a refined sense of aesthetics and a deep awareness of the audience’s experience, he translates a brand’s essence into every detail. 
+            Beyond concept and direction, Tim’s hands-on approach shapes the space in between—bringing ideas to life with precision, character, and atmosphere. </p>
         <img src="images/DSC_0040.2.jpg" style="width:200px; border-radius:6px; margin-top:15px;">
     </div>
 
