--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ a:hover { opacity: 0.7; }
 .container { max-width: 900px; margin: 0 auto; padding: 50px 25px; }
 
 h1, h2, h3 { font-family: 'Playfair Display', serif; color: #111; margin-bottom: 15px; }
-h1 { font-size: 48px; margin-top: 20px; }
+h1 { font-size: 72px; margin-top: 20px; }
 h2 { font-size: 32px; margin-top: 50px; }
 h3 { font-size: 24px; margin-top: 40px; }
 
@@ -61,7 +61,7 @@ ul { padding-left: 20px; margin-top: 5px; }
         <h1>VanVeenIdentity</h1>
         <p><strong>Sound · Picture · Space</strong></p>
         <p>Crafting signature musical experiences that elevate artists, brands, and projects. Enhanced with visuals, spatial design, and bespoke creations for a fully immersive identity.</p>
-        <img src="images/DSC_0880.jpg" style="width:100%; border-radius:6px; margin-top:25px;">
+        <img src="images/ampex.jpg" style="width:100%; border-radius:6px; margin-top:25px;">
     </div>
 
     <!-- SOUND -->
@@ -84,11 +84,10 @@ Crafted to bring any vision to life, with rich, upscale timbres and balanced cla
 Capturing the essence of the creative process, from intimate studio moments to polished product and interior photography. 
             Combining documentary storytelling with an artistic eye to produce images that feel authentic, atmospheric, and visually striking.</p>
         <div class="gallery">
-            <img src="images/portrait.jpg" alt="Portrait">
+            <img src="images/desk" alt="Portrait">
             <img src="images/product.jpg" alt="Product">
-            <img src="images/interior.jpg" alt="Interior">
-            <img src="images/lamp.jpg" alt="Lamp">
-            <img src="images/object.jpg" alt="Handmade Object">
+            <img src="images/cover1.jpg" alt="Interior">
+            <img src="images/gibson.jpg" alt="Product">
         </div>
     </div>
 
@@ -99,9 +98,8 @@ Capturing the essence of the creative process, from intimate studio moments to p
 Bespoke solutions for functional and inspiring environments—pedalboards from reclaimed wood, custom acoustic panels, interior pillars, or complete studio builds. 
             High-end materials like sheepswool ensure superior quality and acoustics, creating spaces that feel intentional, comfortable, and refined.</p>
         <div class="gallery">
-            <img src="images/studio.jpg" alt="Studio Build">
-            <img src="images/pillars.jpg" alt="Interior Pillars">
-            <img src="images/pedalboard.jpg" alt="Pedalboard">
+            <img src="images/vase.jpg" alt="Interior">
+            <img src="images/pedal.jpg" alt="Pedalboard">
         </div>
     </div>
 
@@ -111,7 +109,7 @@ Bespoke solutions for functional and inspiring environments—pedalboards from r
         <p>Tim van Veen is a sonic and visual storyteller based in Amsterdam, blending music, photography, and spatial design to craft cinematic atmospheres for boutique brands and bespoke projects. 
             With a refined sense of aesthetics and a deep awareness of the audience’s experience, he translates a brand’s essence into every detail. 
             Beyond concept and direction, Tim’s hands-on approach shapes the space in between—bringing ideas to life with precision, character, and atmosphere. </p>
-        <img src="images/DSC_0040.2.jpg" style="width:200px; border-radius:6px; margin-top:15px;">
+        <img src="images/portrait.jpg" style="width:200px; border-radius:6px; margin-top:15px;">
     </div>
 
     <!-- CONTACT -->
