--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@ ul { padding-left: 20px; margin-top: 5px; }
     <!-- SOUND -->
     <div id="sound" class="section">
         <h2>Sound</h2>
-        <p>Music Composition & Production
-Crafted to bring any vision to life, with rich, upscale timbres and balanced clarity. 
+        <p>Crafted to bring any vision to life, with rich, upscale timbres and balanced clarity. 
             Specializing in lo-fi and jazzy tracks that melt into the background or set the perfect boutique atmosphere. Ideal for media, branding, or immersive experiences.
 </p>
         <ul>
@@ -80,8 +79,7 @@ Crafted to bring any vision to life, with rich, upscale timbres and balanced cla
     <!-- PICTURE -->
     <div id="picture" class="section">
         <h2>Picture</h2>
-        <p>Photography & Visual Content
-Capturing the essence of the creative process, from intimate studio moments to polished product and interior photography. 
+        <p>Capturing the essence of the creative process, from intimate studio moments to polished product and interior photography. 
             Combining documentary storytelling with an artistic eye to produce images that feel authentic, atmospheric, and visually striking.</p>
         <div class="gallery">
             <img src="images/desk" alt="Portrait">
@@ -94,8 +92,7 @@ Capturing the essence of the creative process, from intimate studio moments to p
     <!-- SPACE -->
     <div id="space" class="section">
         <h2>Space</h2>
-        <p>Custom Spaces & Studio Design
-Bespoke solutions for functional and inspiring environments—pedalboards from reclaimed wood, custom acoustic panels, interior pillars, or complete studio builds. 
+        <p>Bespoke solutions for functional and inspiring environments—pedalboards from reclaimed wood, custom acoustic panels, interior pillars, or complete studio builds. 
             High-end materials like sheepswool ensure superior quality and acoustics, creating spaces that feel intentional, comfortable, and refined.</p>
         <div class="gallery">
             <img src="images/vase.jpg" alt="Interior">
