Fix HTML tags and update image elements

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ h2 { font-size: 32px; margin-top: 50px; }
 h3 { font-size: 24px; margin-top: 40px; }
 
 p, li { font-size: 17px; opacity: 0.9; }
+    p2, { font-size: 36px; opacity: 0.9; }
 ul { padding-left: 20px; margin-top: 5px; }
 
 .section { margin-bottom: 60px; }
@@ -59,7 +60,7 @@ ul { padding-left: 20px; margin-top: 5px; }
     <!-- HOME -->
     <div id="home" class="section">
         <h1>VanVeenIdentity</h1>
-        <p><strong>Sound · Picture · Space</strong></p>
+        <p2><strong>Sound · Picture · Space</strong></p2>
         <p>Crafting signature musical experiences that elevate artists, brands, and projects. Enhanced with visuals, spatial design, and bespoke creations for a fully immersive identity.</p>
         <img src="images/ampex.jpg" style="width:100%; border-radius:6px; margin-top:25px;">
     </div>
@@ -82,10 +83,10 @@ ul { padding-left: 20px; margin-top: 5px; }
         <p>Capturing the essence of the creative process, from intimate studio moments to polished product and interior photography. 
             Combining documentary storytelling with an artistic eye to produce images that feel authentic, atmospheric, and visually striking.</p>
         <div class="gallery">
-            <img src="images/desk" alt="Portrait">
-            <img src="images/product.jpg" alt="Product">
-            <img src="images/cover1.jpg" alt="Interior">
-            <img src="images/gibson.jpg" alt="Product">
+            <img src="images/desk">
+            <img src="images/product.jpg">
+            <img src="images/cover1.jpg">
+            <img src="images/gibson.jpg">
         </div>
     </div>
 
@@ -95,8 +96,8 @@ ul { padding-left: 20px; margin-top: 5px; }
         <p>Bespoke solutions for functional and inspiring environments—pedalboards from reclaimed wood, custom acoustic panels, interior pillars, or complete studio builds. 
             High-end materials like sheepswool ensure superior quality and acoustics, creating spaces that feel intentional, comfortable, and refined.</p>
         <div class="gallery">
-            <img src="images/vase.jpg" alt="Interior">
-            <img src="images/pedal.jpg" alt="Pedalboard">
+            <img src="images/vase.jpg">
+            <img src="images/pedal.jpg">
         </div>
     </div>
 
