--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ ul { padding-left: 20px; margin-top: 5px; }
         <p>Capturing the essence of the creative process, from intimate studio moments to polished product and interior photography. 
             Combining documentary storytelling with an artistic eye to produce images that feel authentic, atmospheric, and visually striking.</p>
         <div class="gallery">
-            <img src="images/desk">
+            <img src="images/desk.jpg">
             <img src="images/product.jpg">
             <img src="images/cover1.jpg">
             <img src="images/gibson.jpg">
@@ -102,13 +102,20 @@ ul { padding-left: 20px; margin-top: 5px; }
     </div>
 
     <!-- ABOUT -->
-    <div id="about" class="section">
-        <h2>About</h2>
-        <p>Tim van Veen is a sonic and visual storyteller based in Amsterdam, blending music, photography, and spatial design to craft cinematic atmospheres for boutique brands and bespoke projects. 
-            With a refined sense of aesthetics and a deep awareness of the audience’s experience, he translates a brand’s essence into every detail. 
-            Beyond concept and direction, Tim’s hands-on approach shapes the space in between—bringing ideas to life with precision, character, and atmosphere. </p>
-        <img src="images/portrait.jpg" style="width:200px; border-radius:6px; margin-top:15px;">
-    </div>
+<div id="about" class="section" style="display:flex; gap:20px; align-items:flex-start;">
+    
+    <img src="images/portrait.jpg" 
+         style="width:200px; border-radius:6px; flex-shrink:0;">
+
+    <p style="max-width:600px;">
+        Tim van Veen is a sonic and visual storyteller based in Amsterdam, 
+        blending music, photography, and spatial design to craft cinematic atmospheres for boutique brands 
+        and bespoke projects. With a refined sense of aesthetics and a deep awareness of the audience’s experience, 
+        he translates a brand’s essence into every detail. Beyond concept and direction, Tim’s hands-on approach 
+        shapes the space in between—bringing ideas to life with precision, character, and atmosphere.
+    </p>
+
+</div>
 
     <!-- CONTACT -->
     <div id="contact" class="section contact-block">
