Refactor about section layout and content
Reorganize the about section layout with flexbox and update content structure.

--- a/index.html
+++ b/index.html
@@ -102,18 +102,22 @@ ul { padding-left: 20px; margin-top: 5px; }
     </div>
 
     <!-- ABOUT -->
-<div id="about" class="section" style="display:flex; gap:20px; align-items:flex-start;">
-    
-    <img src="images/portrait.jpg" 
-         style="width:200px; border-radius:6px; flex-shrink:0;">
+<div id="about" class="section">
+    <h2>About</h2>
 
-    <p style="max-width:600px;">
-        Tim van Veen is a sonic and visual storyteller based in Amsterdam, 
-        blending music, photography, and spatial design to craft cinematic atmospheres for boutique brands 
-        and bespoke projects. With a refined sense of aesthetics and a deep awareness of the audience’s experience, 
-        he translates a brand’s essence into every detail. Beyond concept and direction, Tim’s hands-on approach 
-        shapes the space in between—bringing ideas to life with precision, character, and atmosphere.
-    </p>
+    <div style="display:flex; gap:20px; align-items:flex-start;">
+        <img src="images/portrait.jpg" 
+             style="width:200px; border-radius:6px; flex-shrink:0;">
+
+        <p style="max-width:600px;">
+            Tim van Veen is a sonic and visual storyteller based in Amsterdam, 
+            blending music, photography, and spatial design to craft cinematic atmospheres for boutique brands 
+            and bespoke projects. With a refined sense of aesthetics and a deep awareness of the audience’s experience, 
+            he translates a brand’s essence into every detail. Beyond concept and direction, Tim’s hands-on approach 
+            shapes the space in between—bringing ideas to life with precision, character, and atmosphere.
+        </p>
+    </div>
+</div>
 
 </div>
 
