Update about section layout and image placement

--- a/index.html
+++ b/index.html
@@ -99,14 +99,13 @@ ul { padding-left: 20px; margin-top: 5px; }
         </div>
     </div>
 
-    <!-- ABOUT -->
+<!-- ABOUT -->
 <div id="about" class="section">
     <h2>About</h2>
 
     <div style="display:flex; gap:20px; align-items:flex-start;">
-        <img src="images/portrait.jpg" 
-             style="width:200px; border-radius:6px; flex-shrink:0;">
-
+        
+        <!-- Tekst links -->
         <p style="max-width:600px;">
             Tim van Veen is a sonic and visual storyteller based in Amsterdam, 
             blending music, photography, and spatial design to craft cinematic atmospheres for boutique brands 
@@ -114,6 +113,10 @@ ul { padding-left: 20px; margin-top: 5px; }
             he translates a brand’s essence into every detail. Beyond concept and direction, Tim’s hands-on approach 
             shapes the space in between—bringing ideas to life with precision, character, and atmosphere.
         </p>
+
+        <!-- Foto rechts -->
+        <img src="images/portrait.jpg" 
+             style="width:200px; border-radius:6px; flex-shrink:0;">
     </div>
 </div>
 
