--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ h2 { font-size: 32px; margin-top: 50px; }
 h3 { font-size: 24px; margin-top: 40px; }
 
 p, li { font-size: 17px; opacity: 0.9; }
-    p2, { font-size: 36px; opacity: 0.9; }
+p2 { font-size: 36px; opacity: 0.9; }
 ul { padding-left: 20px; margin-top: 5px; }
 
 .section { margin-bottom: 60px; }
