--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ ul { padding-left: 20px; margin-top: 5px; }
     <!-- HOME -->
     <div id="home" class="section">
         <h1>VanVeenIdentity</h1>
-        <p2><strong>Sound · Picture · Space</strong></p2>
+        <p><strong>Sound · Picture · Space</strong></p>
         <p>Crafting signature musical experiences that elevate artists, brands, and projects. Enhanced with visuals, spatial design, and bespoke creations for a fully immersive identity.</p>
         <img src="images/ampex.jpg" style="width:100%; border-radius:6px; margin-top:25px;">
     </div>
