--- a/index.html
+++ b/index.html
@@ -58,12 +58,22 @@ ul { padding-left: 20px; margin-top: 5px; }
     </div>
 
     <!-- HOME -->
-    <div id="home" class="section">
-        <h1>VanVeenIdentity</h1>
-        <p><strong>Sound · Picture · Space</strong></p>
-        <p>Crafting signature musical experiences that elevate artists, brands, and projects. Enhanced with visuals, spatial design, and bespoke creations for a fully immersive identity.</p>
-        <img src="images/ampex.jpg" style="width:100%; border-radius:6px; margin-top:25px;">
+<div id="home" class="section" style="text-align:center; padding:60px 20px 40px;">
+
+    <div style="margin-bottom:40px;">
+        <h1 style="font-size:48px; margin:0; letter-spacing:1px;">VanVeenIdentity</h1>
+        <p style="font-size:18px; margin:10px 0 0; opacity:0.8; letter-spacing:2px;">
+            <strong>Sound · Picture · Space</strong>
+        </p>
     </div>
+
+    <p style="max-width:700px; margin:0 auto 30px; line-height:1.6;">
+        Crafting signature musical experiences that elevate artists, brands, and projects. Enhanced with 
+        visuals, spatial design, and bespoke creations for a fully immersive identity.
+    </p>
+
+    <img src="images/ampex.jpg" style="width:100%; border-radius:6px; margin-top:25px;">
+</div>
 
     <!-- SOUND -->
     <div id="sound" class="section">
