--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,7 +29,7 @@ p, li { font-size: 17px; opacity: 0.9; }
 p2 { font-size: 36px; opacity: 0.9; }
 ul { padding-left: 20px; margin-top: 5px; }
 
-.section { margin-bottom: 60px; }
+.section { margin-bottom: 60px; text-align: center; }
 
 .gallery { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 15px; margin-top: 20px; }
 .gallery img { width: 100%; border-radius: 6px; object-fit: cover; filter: grayscale(15%) contrast(1.05); }
@@ -41,6 +40,38 @@ ul { padding-left: 20px; margin-top: 5px; }
 .footer { text-align: center; opacity: 0.6; font-size: 14px; margin-top: 60px; }
 .contact-block { margin-top: 40px; padding: 20px 30px; border: 1px solid #d8d5d1; border-radius: 8px; background: #faf9f7; }
 
+/* ---------- ABOUT ---------- */
+#about h2 { text-align: center; }
+#about .about-content { display: flex; gap: 20px; align-items: center; justify-content: center; flex-wrap: wrap; text-align: center; }
+#about .about-content p { text-align: center; max-width:600px; }
+#about .about-content img { width:200px; border-radius:6px; flex-shrink:0; }
+
+/* ---------- SOFT GRAIN OVERLAY ---------- */
+body::after {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 9999;
+    opacity: 0.18;
+    mix-blend-mode: overlay;
+    background-image: url("https://grainy-gradients.vercel.app/grain/grain-1.png");
+    background-size: 600px;
+    background-repeat: repeat;
+    animation: grainMove 9s steps(10) infinite;
+}
+
+@keyframes grainMove {
+    0% { transform:translate(0,0); }
+    20% { transform:translate(-20px, 20px); }
+    40% { transform:translate(20px, -30px); }
+    60% { transform:translate(-25px, 10px); }
+    80% { transform:translate(15px, -15px); }
+    100% { transform:translate(0,0); }
+}
 </style>
 </head>
 <body>
@@ -58,32 +89,32 @@ ul { padding-left: 20px; margin-top: 5px; }
     </div>
 
     <!-- HOME -->
-<div id="home" class="section" style="text-align:center; padding:60px 20px 40px;">
+    <div id="home" class="section" style="text-align:center; padding:60px 20px 40px;">
+        <div style="margin-bottom:40px;">
+            <h1 style="font-size:48px; margin:0; letter-spacing:1px;">VanVeenIdentity</h1>
+            <p style="font-size:18px; margin:10px 0 0; opacity:0.8; letter-spacing:2px;">
+                <strong>Sound · Picture · Space</strong>
+            </p>
+            <div style="width:100px; height:2px; background:#111; margin:20px auto 0; opacity:0; animation:fadeLine 1.5s forwards;"></div>
+        </div>
 
-    <div style="margin-bottom:40px;">
-        <h1 style="font-size:48px; margin:0; letter-spacing:1px;">VanVeenIdentity</h1>
-        <p style="font-size:18px; margin:10px 0 0; opacity:0.8; letter-spacing:2px;">
-            <strong>Sound · Picture · Space</strong>
+        <p style="max-width:700px; margin:0 auto 30px; line-height:1.6;">
+            Crafting signature musical experiences that elevate artists, brands, and projects. Enhanced with 
+            visuals, spatial design, and bespoke creations for a fully immersive identity.
         </p>
+
+        <img src="images/ampex.jpg" style="width:100%; border-radius:6px; margin-top:25px;">
     </div>
-
-    <p style="max-width:700px; margin:0 auto 30px; line-height:1.6;">
-        Crafting signature musical experiences that elevate artists, brands, and projects. Enhanced with 
-        visuals, spatial design, and bespoke creations for a fully immersive identity.
-    </p>
-
-    <img src="images/ampex.jpg" style="width:100%; border-radius:6px; margin-top:25px;">
-</div>
 
     <!-- SOUND -->
     <div id="sound" class="section">
         <h2>Sound</h2>
         <p>Crafted to bring any vision to life, with rich, upscale timbres and balanced clarity. 
             Specializing in lo-fi and jazzy tracks that melt into the background or set the perfect boutique atmosphere. Ideal for media, branding, or immersive experiences.
-</p>
+        </p>
         <ul>
-            <li><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/2vjNAxkUvIrgCDyXtBD9fy?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></li>
-            <li><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/1F8ubL4H0e4SNAZmH45jaf?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></li>
+            <li><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2vjNAxkUvIrgCDyXtBD9fy?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></li>
+            <li><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1F8ubL4H0e4SNAZmH45jaf?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></li>
         </ul>
     </div>
 
@@ -91,7 +122,8 @@ ul { padding-left: 20px; margin-top: 5px; }
     <div id="picture" class="section">
         <h2>Picture</h2>
         <p>Capturing the essence of the creative process, from intimate studio moments to polished product and interior photography. 
-            Combining documentary storytelling with an artistic eye to produce images that feel authentic, atmospheric, and visually striking.</p>
+            Combining documentary storytelling with an artistic eye to produce images that feel authentic, atmospheric, and visually striking.
+        </p>
         <div class="gallery">
             <img src="images/desk.jpg">
             <img src="images/gibson.jpg">
@@ -102,35 +134,30 @@ ul { padding-left: 20px; margin-top: 5px; }
     <div id="space" class="section">
         <h2>Space</h2>
         <p>Bespoke solutions for functional and inspiring environments—pedalboards from reclaimed wood, custom acoustic panels, interior pillars, or complete studio builds. 
-            High-end materials like sheepswool ensure superior quality and acoustics, creating spaces that feel intentional, comfortable, and refined.</p>
+            High-end materials like sheepswool ensure superior quality and acoustics, creating spaces that feel intentional, comfortable, and refined.
+        </p>
         <div class="gallery">
             <img src="images/vase.jpg">
             <img src="images/pedal.jpg">
         </div>
     </div>
 
-<!-- ABOUT -->
-<div id="about" class="section">
-    <h2>About</h2>
-
-    <div style="display:flex; gap:20px; align-items:flex-start;">
-        
-        <!-- Tekst links -->
-        <p style="max-width:600px;">
-            Tim van Veen is a sonic and visual storyteller based in Amsterdam, 
-            blending music, photography, and spatial design to craft cinematic atmospheres for boutique brands 
-            and bespoke projects. With a refined sense of aesthetics and a deep awareness of the audience’s experience, 
-            he translates a brand’s essence into every detail. Beyond concept and direction, Tim’s hands-on approach 
-            shapes the space in between—bringing ideas to life with precision, character, and atmosphere.
-        </p>
-
-        <!-- Foto rechts -->
-        <img src="images/portrait.jpg" 
-             style="width:200px; border-radius:6px; flex-shrink:0;">
+    <!-- ABOUT -->
+    <div id="about" class="section">
+        <h2>About</h2>
+        <div class="about-content">
+            <!-- Tekst gecentreerd -->
+            <p>
+                Tim van Veen is a sonic and visual storyteller based in Amsterdam, 
+                blending music, photography, and spatial design to craft cinematic atmospheres for boutique brands 
+                and bespoke projects. With a refined sense of aesthetics and a deep awareness of the audience’s experience, 
+                he translates a brand’s essence into every detail. Beyond concept and direction, Tim’s hands-on approach 
+                shapes the space in between—bringing ideas to life with precision, character, and atmosphere.
+            </p>
+            <!-- Foto rechts -->
+            <img src="images/portrait.jpg">
+        </div>
     </div>
-</div>
-
-</div>
 
     <!-- CONTACT -->
     <div id="contact" class="section contact-block">
@@ -139,12 +166,18 @@ ul { padding-left: 20px; margin-top: 5px; }
         Creative Director & Producer<br>
         Amsterdam, NL<br>
         <a href="mailto:contact@vanveenidentity.com">contact@vanveenidentity.com</a></p>
-    
     </div>
 
     <p class="footer">© 2025 VanVeenIdentity — Sound · Picture · Space</p>
 
 </div>
+
+<!-- ---------- ANIMATIONS ---------- -->
+<style>
+@keyframes fadeLine {
+    to { opacity: 1; }
+}
+</style>
 
 </body>
 </html>
